force-app/main/default/objects/Quote/fields/Budget_gg__c.field-meta.xml
<CustomField>
    <fullName>Budget_gg__c</fullName>
    <inlineHelpText>Totale giorni/uomo.</inlineHelpText>
    <label>Budget (gg)</label>
    <summarizedField>QuoteLineItem.Quantity</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>