force-app/main/default/objects/Quote/fields/BudgetDD__c.field-meta.xml
<CustomField>
    <fullName>BudgetDD__c</fullName>
    <inlineHelpText>Total days/man</inlineHelpText>
    <label>Budget (dd)</label>
    <summarizedField>QuoteLineItem.Quantity</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>