force-app/main/default/objects/Quote/fields/CostHRMargin__c.field-meta.xml
<CustomField>
    <fullName>CostHRMargin__c</fullName>
    <label>Cost HR Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>