force-app/main/default/objects/Quote/fields/CostMargin__c.field-meta.xml
<CustomField>
    <fullName>CostMargin__c</fullName>
    <label>Cost Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>