force-app/main/default/objects/Quote/fields/IsMarginValid__c.field-meta.xml
<CustomField>
    <fullName>IsMarginValid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Margin Valid</label>
    <type>Checkbox</type>
</CustomField>