force-app/main/default/objects/Quote/fields/isMinMarginValid__c.field-meta.xml
<CustomField>
    <fullName>isMinMarginValid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Min Margin Valid</label>
    <type>Checkbox</type>
</CustomField>