force-app/main/default/objects/Quote/fields/LinksTotalHRCost__c.field-meta.xml
<CustomField>
    <fullName>LinksTotalHRCost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total HR Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>