force-app/main/default/objects/Quote/fields/Opportunity_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Risk_Level__c</fullName>
    <formula>TEXT(Opportunity.Risk_Level__c)</formula>
    <label>Opportunity Risk Level</label>
    <type>Text</type>
</CustomField>