force-app/main/default/objects/Quote/fields/Opportunity_Risk_Level_Description__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Risk_Level_Description__c</fullName>
    <formula>Opportunity.Risk_Level_Description__c</formula>
    <label>Opportunity Risk Level Description</label>
    <type>Text</type>
</CustomField>