force-app/main/default/objects/Quote/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Protocol</label>
    <referenceTo>Protocol__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>