force-app/main/default/objects/Quote/fields/ProtocolNumber__c.field-meta.xml
<CustomField>
    <fullName>ProtocolNumber__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Protocol Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>