force-app/main/default/objects/Quote/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <label>Total Cost</label>
    <summarizedField>Cost__c.TotalCostValue__c</summarizedField>
    <summaryForeignKey>Cost__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>