force-app/main/default/objects/Quote/fields/Total_Internal_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Internal_Cost__c</fullName>
    <description>Costo interno totale, ottenuto dai singoli costi interni delle quote line item.</description>
    <label>Total Internal Cost</label>
    <summarizedField>QuoteLineItem.Total_Internal_Cost__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>