force-app/main/default/objects/Quote/fields/Total_Margin__c.field-meta.xml
<CustomField>
    <fullName>Total_Margin__c</fullName>
    <formula>Total_Revenue__c  -  LinksTotalHRCost__c -  Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Links Revenue - Total HR Cost - Total Cost</inlineHelpText>
    <label>Total Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>