force-app/main/default/objects/Quote/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <label>Total Links Revenue</label>
    <summarizedField>Quote_Revenue__c.LinksRevenue__c</summarizedField>
    <summaryForeignKey>Quote_Revenue__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>