force-app/main/default/objects/Quote/fields/TotalInternalCost__c.field-meta.xml
<CustomField>
    <fullName>TotalInternalCost__c</fullName>
    <description>Total internal cost, obtained from the single internal costs of the Quote Line Items</description>
    <label>Total Internal Cost</label>
    <summarizedField>QuoteLineItem.TotalInternalCost__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>