force-app/main/default/objects/Quote/fields/TotalQuotaATI__c.field-meta.xml
<CustomField>
    <fullName>TotalQuotaATI__c</fullName>
    <label>Total Quota ATI</label>
    <summarizedField>Quote_Revenue__c.QuotaATI__c</summarizedField>
    <summaryForeignKey>Quote_Revenue__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>