force-app/main/default/objects/Quote/fields/TotalRevenue__c.field-meta.xml
<CustomField>
    <fullName>TotalRevenue__c</fullName>
    <formula>Total_Revenue__c +  TotalQuotaATI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Links Revenue + Total Quota ATI</inlineHelpText>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>