force-app/main/default/objects/Quote/recordTypes/Links.recordType-meta.xml
<RecordType>
    <fullName>Links</fullName>
    <active>true</active>
    <label>Links</label>
</RecordType>