force-app/main/default/objects/Quote/validationRules/BlockEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockEdit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(Status),&quot;4&quot;),
				AND(
								RecordType.DeveloperName  = &quot;Links&quot;,
								 $Profile.Name = &quot;LinksSales&quot;)
)</errorConditionFormula>
    <errorMessage>Non puoi modificare una quote quando è in stato &quot;APPROVED&quot;</errorMessage>
</ValidationRule>