force-app/main/default/objects/Quote/validationRules/DraftStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>DraftStatus</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
NOT(ISPICKVAL(Status , &apos;0&apos;)),
RecordType.DeveloperName = &apos;Links&apos;,
$User.Username != &apos;sysadmin@linksmt.it&apos;
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>In fase di Creazione è obbligatorio inserire lo stato Draft</errorMessage>
</ValidationRule>