force-app/main/default/objects/Quote/validationRules/StatusDraft.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusDraft</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $RecordType.DeveloperName = &quot;Links&quot;,
    isMinMarginValid__c = FALSE, 
    ISPICKVAL(PRIORVALUE( Status ),&quot;0&quot;),
				ISCHANGED(Status) 
)</errorConditionFormula>
    <errorMessage>L&apos; Economic Plan non rispetta i parametri minimi per l&apos;auto-approvazione. 
Per approvare l&apos;Offerta allo stato corrente, inviare richiesta di approvazione, cliccando sul bottone &apos;Invia per l&apos;approvazione&apos;</errorMessage>
</ValidationRule>