force-app/main/default/objects/Quote/validationRules/StatusRegistered.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusRegistered</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    $RecordType.DeveloperName = &quot;Links&quot;, 
    ISBLANK(ProtocolNumber__c), 				
    ISPICKVAL(Status, &quot;2&quot;),
    ISPICKVAL(PRIORVALUE( Status ),&quot;1&quot;)
)</errorConditionFormula>
    <errorMessage>Prima di passare allo stato &quot;Registered&quot;, inserire il Protocol Number fornito dall&apos;amministrazione.</errorMessage>
</ValidationRule>