force-app/main/default/objects/Quote/listViews/LinksQuote.listView-meta.xml
<ListView>
    <fullName>LinksQuote</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>TotalRevenue__c</columns>
    <columns>Total_Margin__c</columns>
    <columns>Owner</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>QuoteNumber__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Quote.Links</value>
    </filters>
    <label>LinksQuote</label>
</ListView>